# mgis

./: .gitignore  BUILD.gn  DEPS  README.md  build.bat  environment.x64.x64
base/: BUILD.gn  base.h  base_config.h  base_export.h  base_types.h  basictypes.h  compiler_specific.h  error.h  export.h  init.cpp  init.h  logging.cpp  logging.h  logging_unittest.cpp  macros.h  move.h  platform.h  port.h
base/callback/: callback.h
base/encrypt/: des.cpp  des.h  encrypt.h  encrypt_impl.h
base/file/: file_path.h  file_util.cpp  file_util.h  file_util_posix.cpp  file_util_win.cpp
base/framework/: default_message_pump.cpp  default_message_pump.h  message_loop.cpp  message_loop.h  message_loop_proxy.cpp  message_loop_proxy.h  message_pump.cpp  message_pump.h  observer_list.h  task.h  win_io_message_pump.cpp  win_io_message_pump.h  win_message_pump.cpp  win_message_pump.h  win_ui_message_pump.cpp  win_ui_message_pump.h
base/hardware/: cpu.cpp  cpu.h
base/memory/: blockbuffer.h  deleter.h  lazy_instance.h  ref_counted.h  scoped_ptr.h  singleton.h  weak_ptr.h
base/network/: network_util.cpp  network_util.h  nio_base.h
base/path/: base_paths.h  base_paths_win.cpp  base_paths_win.h
base/synchronization/: lock.h  lock_posix.cpp  lock_win.cpp  semaphore.h  semaphore_posix.cpp  semaphore_win.cpp  waitable_event.h  waitable_event_posix.cpp  waitable_event_win.cpp
base/thread/: framework_thread.cpp  framework_thread.h  thread.h  thread_local.h  thread_local_posix.cpp  thread_local_win.cpp  thread_manager.cpp  thread_manager.h  thread_posix.cpp  thread_win.cpp
base/time/: time.cpp  time.h  time_posix.cpp  time_win.cpp
base/util/: at_exit.cpp  at_exit.h  base64.cpp  base64.h  cmd_line_args.cpp  cmd_line_args.h  string_number_conversions.cpp  string_number_conversions.h  string_util.cpp  string_util.h  stringize_macros.h  template_util.h  unicode.h  valuemap.h
base/win32/: object_watcher.cpp  object_watcher.h  path_util.cpp  path_util.h  platform_string_util.cpp  platform_string_util.h  scoped_win_handle.h  security_util.cpp  security_util.h  shared_memory.cpp  shared_memory.h  win_util.cpp  win_util.h
content/: BUILD.gn  content.h  content_export.h  content_unittest.cpp  export.cpp  initializer.h
content/common/: command.cpp  command.h  dynamic_library.cpp  dynamic_library.h  environment.cpp  environment.h  library.cpp  library.h  message.cpp  message.h  message_listener.cpp  message_listener.h  plugin.cpp  plugin.h  tool.cpp  tool.h
content/control/: control.rc  map_content_impl.h  tool_factory.cpp  tool_factory.h
content/control/core/: gt_base3dtool.h  gt_basetool.h  gt_grouptoolfactory.cpp  gt_grouptoolfactory.h  gt_iacommandreceiver.cpp  resource.h
content/control/edit/: gt_appendfeaturetool.cpp  gt_inputlinetool.cpp  gt_inputpointtool.h  gt_selecttool.cpp
content/control/map_box/: map_app.h  map_box_impl.h  map_view_impl.h  map_window.cpp  map_window.h
content/control/navigate/: gt_3dviewctrltool.cpp  gt_viewctrltool.cpp  gt_wsviewctrltool.cpp
content/control/resource/: resource.h
content/control/tool/: common.h  edit_tool.cpp  edit_tool.h  flash_tool.cpp  flash_tool.h  input_line_tool.cpp  input_line_tool.h  input_point_tool.cpp  input_point_tool.h  input_surface_tool.cpp  input_surface_tool.h  navigate_tool.cpp  navigate_tool.h  select_tool.cpp  select_tool.h  tool_factory.cpp  tool_factory.h
content/control/window/: map_app.cpp  map_window.cpp  map_window.h
content/core/: command.cpp  command.h  dynamic_library.cpp  dynamic_library.h  environment.h  message.h  message_listener.cpp  message_listener.h  plugin.cpp  plugin.h
content/impl/: map_content_impl.h  map_view_impl.h
content/impl/app/: process_runner_impl.h
content/public/: map_content.h  map_content_client.h  map_types.h  map_view.h
content/public/app/: process_runner.h  task_runner.h
content/public/delegate/: map_box_delegate.h  map_view_delegate.h
content/public/map_box/: map_box.h  map_view.h
core/: BUILD.gn  command.cpp  command.h  core.h  core_unittest.cpp  dynamic_library.cpp  dynamic_library.h  environment.h  export.h  listener.cpp  listener.h  message.h  plugin.cpp  plugin.h
core/data/sh/: POLYGON.dbf  POLYGON.shp  POLYGON.shx
core/geometry/: geometry.cpp  geometry.h  geometry_unittest.cpp
core/map/: gis_3dfeature.cpp  gis_3dfeature.h  gis_api.cpp  gis_api.h  gis_attribute.cpp  gis_attribute.h  gis_feature.cpp  gis_feature.h  gis_field.cpp  gis_map.cpp  gis_map.h
core/sdb/: BUILD.gn  sdb.cpp  sdb.h  sdb_export.h  sdb_unittest.cpp
core/sdb/ogr/: commonutils.cpp  commonutils.h  gdal.hpp  test_ogrsf.cpp  test_reprojmulti.cpp
framework/: BUILD.gn  command.cpp  command.h  core_export.h  dynamic_library.cpp  dynamic_library.h  environment.h  framework.h  framework_export.h  framework_unittest.cpp  listener.cpp  listener.h  message.h  plugin.cpp  plugin.h
geometry/: BUILD.gn  algorithms.cpp  algorithms.h  export.h  geometry.cpp  geometry.h  geometry_unittest.cpp
geometry/base/: dot.h  matrix2d.h  rect.h  tile.h  vector2d.h
geometry/curve/: arc.cpp  arc.h  curve.cpp  curve.h  linearring.cpp  linearring.h  linestring.cpp  linestring.h  multilinestring.cpp  multilinestring.h  spline.cpp  spline.h
geometry/net/: grid.cpp  grid.h  tin.cpp  tin.h
geometry/point/: multipoint.cpp  multipoint.h  point.cpp  point.h
geometry/surface/: fan.cpp  fan.h  multipolygon.cpp  multipolygon.h  polygon.cpp  polygon.h  surface.h
gfx/2d/: BUILD.gn  render2d_unittest.cpp
gfx/2d/render_device_gdi/: export.cpp  (+6 more)
gfx/3d/: BUILD.gn  render3d_unittest.cpp
gui/: BUILD.gn  gui_unittest.cpp  main.cpp  main_runner.cpp  main_runner.h
gui/app/: app.h  frame.cpp  frame.h  main_runner.cpp  main_runner.h  resource.h  resource.rc  targetver.h  view.cpp  view.h  window.h  window2d.cpp  window2d.h
gui/base/: command_line.cpp  command_line.h  lock.h  scoped_process_initializer.h
gui/content_impl/: map_content_client_impl.cpp  map_content_client_impl.h  map_content_factory.cpp  map_content_factory.h  map_content_manager.cpp  map_content_manager.h
testing/: main.cpp  test.gni  test.h
(+198 files in other folders)
