# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.

group("all") {
  deps = [
    "//third_party:all",
    "//gui:smartgis",
    "//gfx/2d:render_device_gdi",
  ]
}

group("test") {
  testonly = true
  deps = [
    "//base:base_test",
    "//core:core_test",
    "//content:content_test",
    "//gfx/2d:render2d_test",
  ]
}