# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.

group("all") {
  deps = []
  if (!is_build_third_party) {
    deps += [
      "//base:base",
      "//gui:smartgis",
      "//gfx/2d:render_device_gdi",
      "//gfx/3d:render_device_d3d",
    ]
  }

  if (is_build_third_party) {
    deps += [
      "//third_party:third_party_all",
    ]
  }
}