# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

static_library("content") {
  defines = [
    "NOMINMAX",
  ]

  sources = [
    "common/command.cpp",
    "common/dynamic_library.cpp",
    "common/message_listener.cpp",
    "common/plugin.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  libs = [
  ]

  deps = [
    "//base:base",
  ]
}

# test("content_test") {
#   sources = [
#     "content_unittest.cpp",
#   ]

#   include_dirs += [
#     "$root_gen_dir/",
#     "$root_out_dir/third_party/include",
#   ]

#   deps = [
#     ":content",
#   ]
# }