# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

static_library("content") {
  defines = [
    "NOMINMAX",
  ]

  sources = [
    "common/command.cpp",
    "common/environment.cpp",
    "common/library.cpp",
    "common/message.cpp",
    "common/plugin.cpp",
    "common/tool.cpp",
    "control/map_box/map_window.cpp",
    "control/tool_factory.cpp",
    "control/tool/flash_tool.cpp",
    # "control/tool/input_line_tool.cpp",
    # "control/tool/input_point_tool.cpp",
    # "control/tool/input_surface_tool.cpp",
    "control/tool/navigate_tool.cpp",
    # "control/tool/select_tool.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
    "//content/control/third_party/wtl8.0/",
  ]

  libs = [
  ]

  deps = [
    "//base:base",
  ]
}

test("content_test") {
  sources = [
    "content_unittest.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  deps = [
    ":content",
  ]
}