# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

shared_library("content") {
  defines = [
    "NOMINMAX",
    "COMPONENT_BUILD",
    "CONTENT_IMPLEMENTATION",
  ]

  configs += [
    "//build/config/win:no_cr_code",
  ]

  sources = [
    "common/command.cpp",
    "common/library.cpp",
    "common/message.cpp",
    "common/plugin.cpp",
    "common/tool.cpp",
    "control/window/map_app.cpp",
    "control/window/map_window.cpp",
    "control/tool/edit_tool.cpp",
    "control/tool/flash_tool.cpp",
    "control/tool/input_line_tool.cpp",
    "control/tool/input_point_tool.cpp",
    "control/tool/input_surface_tool.cpp",
    "control/tool/navigate_tool.cpp",
    "control/tool/select_tool.cpp",
    "control/tool/tool_factory.cpp",
    "export.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
    "//third_party/wtl8.0/",
  ]

  suffix = ""
  if (is_debug) {
    suffix = "d"
  }

  libs = [
    "atls.lib",
    "$root_out_dir/third_party/lib/gdal$suffix.lib",
    "$root_out_dir/third_party/lib/glog$suffix.lib",
  ]

  deps = [
    "//base:base",
    "//core:core",
    "//gfx/2d:renderer2d",
    "//gfx/3d:renderer3d",
  ]
}

test("content_test") {
  sources = [
    "content_unittest.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  deps = [
    ":content",
  ]
}