# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

static_library("core") {
  defines = [
    "NOMINMAX",
    "USE_UNSTABLE_GEOS_CPP_API",
  ]

  sources = [
    "geometry/geometry.cpp",
    "sdb/sdb.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  postfix = ""
  if (is_debug) {
    postfix = "d"
  }

  libs = [
    "$root_out_dir/third_party/lib/sqlite3.lib",
    "$root_out_dir/third_party/lib/SQLiteCpp.lib",
    "$root_out_dir/third_party/lib/geos.lib",
    "$root_out_dir/third_party/lib/gdal$postfix.lib",
    "$root_out_dir/third_party/lib/spatialindex-64.lib",
    "$root_out_dir/third_party/lib/spatialite_i.lib",
    "$root_out_dir/third_party/lib/SpatiaLiteCpp.lib",
  ]

  deps = [
    "//base:base",
  ]
}

executable("gdal_ogrsf") {
  sources = [
    "sdb/ogr/commonutils.cpp",
    "sdb/ogr/test_ogrsf.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  postfix = ""
  if (is_debug) {
    postfix = "d"
  }

  libs = [
    "$root_out_dir/third_party/lib/gdal$postfix.lib",
  ]

  deps = [
    ":core",
  ]
}

executable("gdal_reprojmulti") {
  sources = [
    "sdb/ogr/test_reprojmulti.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  postfix = ""
  if (is_debug) {
    postfix = "d"
  }

  libs = [
    "$root_out_dir/third_party/lib/gdal.lib",
  ]


  deps = [
    ":core",
  ]
}

# test("core_test") {
#   defines = [
#     "NOMINMAX",
#     "USE_UNSTABLE_GEOS_CPP_API",
#   ]

#   sources = [
#     "core_unittest.cpp",
#     "geometry/geometry_unittest.cpp",
#     "sdb/sdb_unittest.cpp",
#   ]

#   include_dirs += [
#     "$root_gen_dir/",
#     "$root_out_dir/third_party/include",
#   ]

  # postfix = ""
  # if (is_debug) {
  #   postfix = "d"
  # }

#   libs = [
#     "$root_out_dir/third_party/lib/sqlite3.lib",
#     "$root_out_dir/third_party/lib/SQLiteCpp.lib",
#     "$root_out_dir/third_party/lib/geos.lib",
#     "$root_out_dir/third_party/lib/proj.lib",
#     "$root_out_dir/third_party/lib/gdal.lib",
#     "$root_out_dir/third_party/lib/spatialindex-64.lib",
#     "$root_out_dir/third_party/lib/spatialite_i.lib",
#     "$root_out_dir/third_party/lib/SpatiaLiteCpp.lib",
#   ]

#   deps = [
#     ":core",
#   ]
# }