# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

static_library("core") {
  defines = [
    "NOMINMAX",
    "USE_UNSTABLE_GEOS_CPP_API",
  ]

  sources = [
    "geometry/geometry.cpp",
    "sdb/sdb.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  suffix = ""
  if (is_debug) {
    suffix = "d"
  }

  libs = [
    "$root_out_dir/third_party/lib/sqlite3.lib",
    "$root_out_dir/third_party/lib/SQLiteCpp.lib",
    "$root_out_dir/third_party/lib/geos.lib",
    "$root_out_dir/third_party/lib/gdal$suffix.lib",
    "$root_out_dir/third_party/lib/spatialindex-64.lib",
    "$root_out_dir/third_party/lib/spatialite_i.lib",
    "$root_out_dir/third_party/lib/SpatiaLiteCpp.lib",
  ]

  deps = [
    "//base:base",
    "//third_party:all",
  ]
}

test("core_test") {
  defines = [
    "NOMINMAX",
    "USE_UNSTABLE_GEOS_CPP_API",
  ]

  sources = [
    "core_unittest.cpp",
    "geometry/geometry_unittest.cpp",
    "sdb/sdb_unittest.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  proj_suffix = ""
  gdal_suffix = ""
  if (is_debug) {
    proj_suffix = "_d"
    gdal_suffix = "d"
  }

  libs = [
    "$root_out_dir/third_party/lib/sqlite3.lib",
    "$root_out_dir/third_party/lib/SQLiteCpp.lib",
    "$root_out_dir/third_party/lib/geos.lib",
    "$root_out_dir/third_party/lib/proj$proj_suffix.lib",
    "$root_out_dir/third_party/lib/gdal$gdal_suffix.lib",
    "$root_out_dir/third_party/lib/spatialindex-64.lib",
    "$root_out_dir/third_party/lib/spatialite_i.lib",
    "$root_out_dir/third_party/lib/SpatiaLiteCpp.lib",
  ]

  deps = [
    ":core",
  ]
}