# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

static_library("geometry") {
  defines = [
    "NOMINMAX",
  ]

  sources = [
    # "curve/arc.cpp",
    # "curve/curve.cpp",
    # "curve/linearring.cpp",
    # "curve/linestring.cpp",
    # "curve/multilinestring.cpp",
    # "curve/spline.cpp",
    # "net/grid.cpp",
    # "net/tin.cpp",
    # "point/multipoint.cpp",
    # "point/point.cpp",
    # "surface/fan.cpp",
    # "surface/multipolygon.cpp",
    # "surface/polygon.cpp",
    "geometry.cpp",
    "algorithms.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/glog/include",
    "$root_out_dir/gbenchmark/include",
    "$root_out_dir/gtest/include",
  ]

  deps = [
    "//base:base",
  ]
}

test("geometry_test") {
  sources = [
    "geometry_unittest.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/glog/include",
    "$root_out_dir/gbenchmark/include",
    "$root_out_dir/gtest/include",
  ]

  deps = [
    ":geometry",
  ]
}