# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

executable("smartgis") {
  defines = [
    "NOMINMAX",
  ]

  sources = [
    "base/thread/message_loop.cpp",
    "base/thread/thread_manager.cpp",
    "base/thread/thread.cpp",
    "base/command_line.cpp",
    "content_impl/app/task_runner_impl.cpp",
    "content_impl/delegate/map_box_delegate_impl.cpp",
    "content_impl/delegate/map_view_delegate_impl.cpp",
    "content_impl/map_content_client_impl.cpp",
    "content_impl/map_content_factory.cpp",
    "content_impl/map_content_manager.cpp",
    "main_runner.cpp",
    "main.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
    "//gui/third_party/wtl8.0/",
  ]

  suffix = ""
  if (is_debug) {
    suffix = "d"
  }

  libs += [
    "atls.lib",
    "$root_out_dir/third_party/lib/glog$suffix.lib",
  ]

  deps = [
    "//base:base",
    "//core:core",
    "//content:content",
    "//third_party:glog",
    "//gfx/2d:renderer2d",
    "//gfx/3d:renderer3d",
  ]
}