# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

executable("smartgis") {
  defines = [
    "NOMINMAX",
  ]

  sources = [
    "base/thread/message_loop.cpp",
    "base/thread/thread_manager.cpp",
    "base/thread/thread.cpp",
    "base/command_line.cpp",
    "content_impl/app/task_runner_impl.cpp",
    "content_impl/client/map_content_client_impl.cpp",
    "content_impl/delegate/map_view_delegate_impl.cpp",
    "content_impl/factory/map_content_factory.cpp",
    "content_impl/manager/map_content_manager.cpp",
    "main_runner.cpp",
    "main.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
    # "//third_party/wtl8.0/",
  ]

  suffix = ""
  if (is_debug) {
    suffix = "d"
  }

  libs += [
    "atls.lib",
    "$root_out_dir/third_party/lib/glog$suffix.lib",
  ]

  deps = [
    "//base:base",
    "//content:content",
  ]
}