# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.

template("test") {
  executable(target_name) {
    forward_variables_from(invoker, "*")

    testonly = true

    sources += [
      "//testing/main.cpp",
    ]

    include_dirs += [
      "$root_gen_dir/",
      "$root_out_dir/third_party/include",
    ]

    if (is_win) {
      postfix = ""
      if (is_debug) {
        postfix = "d"
      }

      libs += [
        "$root_out_dir/third_party/lib/glog$postfix.lib",
        "$root_out_dir/third_party/lib/benchmark.lib",
        "$root_out_dir/third_party/lib/benchmark_main.lib",
        "$root_out_dir/third_party/lib/gmock$postfix.lib",
        "$root_out_dir/third_party/lib/gmock_main$postfix.lib",
        "$root_out_dir/third_party/lib/gtest$postfix.lib",
        "$root_out_dir/third_party/lib/gtest_main$postfix.lib",
      ]
    } else {
      libs += [
        "/usr/lib/x86_64-linux-gnu/libgflags.so",
        "/usr/lib/x86_64-linux-gnu/libunwind.so",
        "$root_out_dir/third_party/lib/libglog.a",
        "$root_out_dir/third_party/lib/libbenchmark.a",
        "$root_out_dir/third_party/lib/libbenchmark_main.a",
        "$root_out_dir/third_party/lib/libgmock.a",
        "$root_out_dir/third_party/lib/libgmock_main.a",
        "$root_out_dir/third_party/lib/libgtest.a",
        "$root_out_dir/third_party/lib/libgtest_main.a",
      ]

      ldflags = [
        "-lgflags",
        "-lunwind"
      ]
    }

    deps += [
      "//third_party:gbenchmark",
      "//third_party:gtest",
    ]
  }
}
