# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

static_library("sdb") {
  defines = [
    "NOMINMAX",
  ]

  sources = [
    "sdb.cpp",

  ]

  include_dirs += [
    "$root_gen_dir/",
    # "$root_out_dir/gdal/include",
  ]

  deps = [
    "//base:base",
    # "//third_party:gdal",
  ]
}

test("sdb_test") {
  sources = [
    "sdb_unittest.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
  ]

  deps = [
    ":sdb",
  ]
}