# Copyright (c) 2023 The Mogu Authors.
# All rights reserved.
import("//testing/test.gni")

static_library("renderer2d") {
  defines = [
    "NOMINMAX",
  ]

  sources = [
    "renderer/renderer.cpp",
    "renderer/style.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  suffix = ""
  if (is_debug) {
    suffix = "d"
  }

  libs = [
    "$root_out_dir/third_party/lib/glog$suffix.lib",
    "$root_out_dir/third_party/lib/gdal$suffix.lib",
  ]

  deps = [
    "//base:base",
    "//third_party:glog",
    "//third_party:gdal",
  ]
}

shared_library("render_device_gdi") {
  defines = [
    "NOMINMAX",
    "COMPONENT_BUILD",
    "GFX_2D_RENDER_DEVICE_IMPLEMENTATION",
  ]

  sources = [
    "render_device_gdi/export.cpp",
    "render_device_gdi/render_buffer.cpp",
    "render_device_gdi/render_device_gdi.cpp",
    "render_device_gdi/utils.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  suffix = ""
  if (is_debug) {
    suffix = "d"
  }

  libs = [
    "$root_out_dir/third_party/lib/glog$suffix.lib",
    "$root_out_dir/third_party/lib/gdal$suffix.lib",
  ]

  deps = [
    "//base:base",
    "//third_party:glog",
    "//third_party:gdal",
    ":renderer2d",
    "//third_party/CxImage:CxImage",
  ]
}

test("renderer2d_test") {
  defines = [
    "NOMINMAX",
  ]

  sources = [
    "render2d_unittest.cpp",
  ]

  include_dirs += [
    "$root_gen_dir/",
    "$root_out_dir/third_party/include",
  ]

  suffix = ""
  if (is_debug) {
    suffix = "d"
  }

  libs = [
    "$root_out_dir/third_party/lib/glog$suffix.lib",
    "$root_out_dir/third_party/lib/gdal$suffix.lib",
  ]

  deps = [
    "//third_party:glog",
    "//third_party:gdal",
    ":renderer2d",
  ]
}